# sjakk

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish-ghcr.yml
infra/: readme.md
templates/: index.html
